--- a/README.Rmd
+++ b/README.Rmd
@@ -7,7 +7,7 @@ output:
 ## Introduction
 
 This package contains the [Correlates of State
-Policy](http://http://ippsr.msu.edu/public-policy/correlates-state-policy) 
+Policy](http://ippsr.msu.edu/public-policy/correlates-state-policy) 
 dataset, which
 
 > ... includes more than seven-hundred variables, with observations across the
@@ -23,8 +23,9 @@ Suggested citation:
 > Project v.1.0. East Lansing, MI: Institute for Public Policy and Social Research
 > (IPPSR).
 
-The package allows the user to load and work with the dataset using the R
-programming language. 
+The package allows the user to load and work with the dataset using the R 
+programming language. Crucially, it incorporates the entire codebook into the
+dataset, which allows for easier filtering, finding units and sources, etc.
 
 ## Example use
 
@@ -55,5 +56,5 @@ ggplot(df, aes(x = year, y = value, color = state)) +
 
 This package is not affiliated with, nor endorsed by, the Correlates of State
 Policy Project. All credit go to the original authors, and questions should be
-directed to them. Please check the [official website](http://http://ippsr.msu.edu/public-policy/correlates-state-policy) 
+directed to them. Please check the [official website](http://ippsr.msu.edu/public-policy/correlates-state-policy) 
 for further details on citations, etc.
