--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,10 @@ output:
     variant: markdown_github
 ---
 
+[![Travis-CI Build Status](https://travis-ci.org/expersso/csp.svg?branch=master)](https://travis-ci.org/expersso/csp)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/csp)](https://cran.r-project.org/package=csp)
+[![CRAN_Logs_Badge](http://cranlogs.r-pkg.org/badges/grand-total/csp)](https://cran.r-project.org/package=csp)
+
 ## Introduction
 
 This package contains the [Correlates of State
